--- a/src/scss/entry/marketplace.scss
+++ b/src/scss/entry/marketplace.scss
@@ -117,15 +117,6 @@
             max-height: max-content;
             row-gap: 0 !important;
         }
-
-        .look-img-container {
-            display: flex;
-            justify-content: center;
-
-            .look-img {
-                width: auto;
-            }
-        }
     }
 }
 
